BJS2-65398:fix/fix comments